syntax = "proto3";
package userservice;

import "google/protobuf/field_mask.proto";

option java_multiple_files = true;
option java_package = "example.grpc";
option java_outer_classname = "UserProto";

message Userinfo {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string age = 4;
}

service UserinfoService {
  rpc GetUserinfo (UserIdx) returns (Userinfo);
  rpc PutUserinfo (Userinfo) returns (UserIdx);
  rpc GetAllUsers (UserIdx) returns (UserList);

}

message UserList {
  repeated Userinfo users = 1;
}

message UserIdx {
  int64 userId = 1;
}

